@@ -5,3 +5,8 @@ Third Party
    :members:
    :undoc-members:
    :show-inheritance:
+
+.. autoclass:: jelastic.api.utils._GeoIp
+   :members:
+   :undoc-members:
+   :show-inheritance:
